[gd_scene load_steps=4 format=3 uid="uid://b2s64vcfosbd3"]

[ext_resource type="Script" path="res://scripts/enemy_laser.gd" id="1_fd71k"]
[ext_resource type="Texture2D" uid="uid://bpcu7qsrq5sny" path="res://assets/textures/red_laser.png" id="2_5mfde"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cjbbl"]
size = Vector2(7, 68)

[node name="EnemyLaser" type="Area2D"]
script = ExtResource("1_fd71k")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.352941, 1, 0.858824, 1)
self_modulate = Color(0, 0.988235, 0.490196, 1)
rotation = 3.14159
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_5mfde")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_cjbbl")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1, -50)
scale = Vector2(0.6, 0.4)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
